kubernetes/poi_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poi-deployment
  namespace: api
  labels:
    app: tripInsights
spec:
  replicas: 2
  selector:
    matchLabels:
      app: poi-1.0
  template:
    metadata:
      labels:
        app: poi-1.0
    spec:
      containers:
      - name: poi
        image: registrypek4427.azurecr.io/poi:1.0
        volumeMounts:
        - name: secrets-store01-inline
          mountPath: "/secrets"
          readOnly: true
        ports:
        - containerPort: 80

      volumes:
        - name: secrets-store01-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-kvname-user-msi"

---

apiVersion: v1
kind: Service
metadata:
  name: poi-service
  namespace: api
  labels:
    run: poi-service
spec:
  ports:
  - protocol: TCP
    name: http
    port: 8080
    targetPort: 80
  selector:
    app: poi-1.0
