kubernetes/tripviewer_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripviewer-deployment
  labels:
    app: tripInsights
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tripviewer-1.0
  template:
    metadata:
      labels:
        app: tripviewer-1.0
    spec:
      containers:
      - name: tripviewer
        image: registrypek4427.azurecr.io/tripviewer:1.0
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: tripviewer-service
  labels:
    run: tripviewer-service
spec:
  type: LoadBalancer
  ports:
  - protocol: TCP
    name: http
    port: 8080
    targetPort: 80
  selector:
    app: tripviewer-1.0
