kubernetes/user-java_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-java-deployment
  labels:
    app: tripInsights
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-java-1.0
  template:
    metadata:
      labels:
        app: user-java-1.0
    spec:
      containers:
      - name: user-java
        image: registrypek4427.azurecr.io/user-java:1.0
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: user-java-service
  labels:
    run: user-java-service
spec:
  ports:
  - protocol: TCP
    name: http
    port: 8080
    targetPort: 80
  selector:
    app: user-java-1.0
