kubernetes/userprofile_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofile-deployment
  labels:
    app: tripInsights
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userprofile-1.0
  template:
    metadata:
      labels:
        app: userprofile-1.0
    spec:
      containers:
      - name: userprofile
        image: registrypek4427.azurecr.io/userprofile:1.0
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: userprofile-service
  labels:
    run: userprofile-service
spec:
  ports:
  - protocol: TCP
    name: http
    port: 8080
    targetPort: 80
  selector:
    app: userprofile-1.0
